# python-aws-monitor

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  monitor.py  pyproject.toml  requirements.txt  test_s3.py
.github/: commit_template.txt  pull_request_template.md
.github/workflows/: branch-name-check.yml  ci.yaml
config/: config.yaml
scripts/: validate_commit_msg.py
src/python_health_monitor/: monitor.py
tests/: test_config.py  test_monitor.py
